--- a/src/components/ImageHolder/imageholder.css
+++ b/src/components/ImageHolder/imageholder.css
@@ -1,27 +1,72 @@
-.imageHolder__container{
-    animation: fadeInAnimation 1.5s ease-in-out forwards;
+.imageHolder__container {
+  height: 400px;
+  position: relative;
+  z-index: 1;
+  margin: 10px;
+  opacity: 0;
+  animation: fadeInAnimation 1.5s ease-in-out forwards;
 }
-  
-  @keyframes fadeInAnimation {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
-  }
 
-  .imageHolder__container:hover .imageHolder__topInfo{
-    transition: opacity 0.5s ease-in;
+@keyframes fadeInAnimation {
+  from {
     opacity: 0;
-    font-weight: bold;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
-.imageHolder__container:hover .imageHolder__topInfo--details{
-    transition: opacity 0.5s ease-out;
-    opacity: 80%;
-    display: flex;
+.imageHolder__image {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
 }
 
+.imageHolder__topInfo,
+.imageHolder__topInfo--details {
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: larger;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  background-color: rgb(94, 94, 94);
+  height: 100%;
+  width: 100%;
+  opacity: 80%;
+  text-align: center;
+  padding: 0 10px;
+}
 
+.imageHolder__topInfo--details {
+  opacity: 0;
+}
 
+.imageHolder__container:hover .imageHolder__topInfo {
+  transition: opacity 0.5s ease-in;
+  opacity: 0;
+  font-weight: bold;
+}
+
+.imageHolder__container:hover .imageHolder__topInfo--details {
+  transition: opacity 0.5s ease-out;
+  opacity: 80%;
+  display: flex;
+}
+
+.imageHolder__topInfo--details button {
+  padding: 20px;
+  background-color: transparent;
+  border-radius: 5px;
+  border: white solid 1px;
+  color: white;
+  margin-top: 30px;
+  cursor: pointer;
+  font-weight: bolder;
+}
